fix: Update Chart.js references to use the correct UMD version in scripts and checks

--- a/cubesat/index.html
+++ b/cubesat/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard de CubeSat</title>
-    <script src="libs/chart/chart.min.js"></script>
+    <script src="libs/chart/chart.umd.js"></script>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
